--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+wikiTableTag=table.wikitable tr
 
+xDataPatternString.regexp=^(\\d{1,2}) (.*) (\\d{4})
+xDataColumnNumber=2
+xDataGroupPosition=3
+
+yDataColumnNumber=0
+yDataPatternString.regexp=^([0-9]+.[0-9]+)
+yDataGroupPosition=0
