Change in url config spot to keep all together in properties file.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
+url=https://en.wikipedia.org/wiki/List_of_films_with_a_100%25_rating_on_Rotten_Tomatoes
 wikiTableTag=table.wikitable tr
 
-xDataPatternString.regexp=^(\\d{1,2}) (.*) (\\d{4})
-xDataColumnNumber=2
-xDataGroupPosition=3
+xDataPatternString.regexp=^(\\d{4})
+xDataColumnNumber=1
+xDataGroupPosition=1
 
-yDataColumnNumber=0
-yDataPatternString.regexp=^([0-9]+.[0-9]+)
+yDataColumnNumber=2
+yDataPatternString.regexp=^([0-9]+)
 yDataGroupPosition=0
